Add NextUI setting

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,11 +14,11 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
-    "types": ["@emotion/react/types/css-prop"],
     "baseUrl": "./src",
     "paths": {
       "components/*": ["./components/*"],
       "hooks/*": ["./hooks/*"],
+      "assets/*": ["./assets/*"],
       "shared/*": ["./shared/*"]
     }
   },
