--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,11 @@ yarn-error.log*
 
 # typescript
 *.tsbuildinfo
+
+# PWA files
+**/public/sw.js
+**/public/workbox-*.js
+**/public/worker-*.js
+**/public/sw.js.map
+**/public/workbox-*.js.map
+**/public/worker-*.js.map
